-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u60, 9
-
Component/s: hotspot
-
b74
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135580 | emb-9 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | team |
| JDK-8133369 | 8u71 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b01 |
| JDK-8130541 | 8u66 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b01 |
| JDK-8131655 | 8u65 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b06 |
| JDK-8129586 | 8u60 | Poonam Bajaj Parhar | P2 | Closed | Fixed | b24 |
| JDK-8143674 | emb-8u71 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b01 |
| JDK-8137711 | emb-8u65 | Unassigned | P2 | Resolved | Fixed | b06 |
| JDK-8131399 | emb-8u60 | Poonam Bajaj Parhar | P2 | Resolved | Fixed | b24 |
# Internal Error (hotspot/src/share/vm/gc/cms/concurrentMarkSweepGeneration.cpp:4472), pid=16267, tid=0xf36ffb70
# assert(_collector->should_unload_classes() || (_collector->CMSCollector::roots_scanning_options() & GenCollectedHeap::SO_AllCodeCache)) failed: if we didn't scan the code cache, we have to be ready to drop nmethods with expired weak oops
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150617220601.iklam.jdk9_rt-b00)
# Java VM: Java HotSpot(TM) Client VM (1.9.0-internal-fastdebug-20150617220601.iklam.jdk9_rt-b00 mixed mode, sharing linux-x86 )
Current thread (0xf6322000): GCTaskThread [stack: 0xf367f000,0xf3700000] [id=16282]
Stack: [0xf367f000,0xf3700000], sp=0xf36ff050, free space=512k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa8df2a] VMError::report_and_die()+0x19a;; VMError::report_and_die()+0x19a
V [libjvm.so+0x3dfcd6] report_vm_error(char const*, int, char const*, char const*)+0x76;; report_vm_error(char const*, int, char const*, char const*)+0x76
V [libjvm.so+0x3aac44] CMSParInitialMarkTask::work(unsigned int)+0x244;; CMSParInitialMarkTask::work(unsigned int)+0x244
V [libjvm.so+0xae2404] GangWorker::loop()+0x254;; GangWorker::loop()+0x254
V [libjvm.so+0x898320] java_start(Thread*)+0x100;; java_start(Thread*)+0x100
Seems to be related toJDK-8085965.
# assert(_collector->should_unload_classes() || (_collector->CMSCollector::roots_scanning_options() & GenCollectedHeap::SO_AllCodeCache)) failed: if we didn't scan the code cache, we have to be ready to drop nmethods with expired weak oops
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150617220601.iklam.jdk9_rt-b00)
# Java VM: Java HotSpot(TM) Client VM (1.9.0-internal-fastdebug-20150617220601.iklam.jdk9_rt-b00 mixed mode, sharing linux-x86 )
Current thread (0xf6322000): GCTaskThread [stack: 0xf367f000,0xf3700000] [id=16282]
Stack: [0xf367f000,0xf3700000], sp=0xf36ff050, free space=512k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa8df2a] VMError::report_and_die()+0x19a;; VMError::report_and_die()+0x19a
V [libjvm.so+0x3dfcd6] report_vm_error(char const*, int, char const*, char const*)+0x76;; report_vm_error(char const*, int, char const*, char const*)+0x76
V [libjvm.so+0x3aac44] CMSParInitialMarkTask::work(unsigned int)+0x244;; CMSParInitialMarkTask::work(unsigned int)+0x244
V [libjvm.so+0xae2404] GangWorker::loop()+0x254;; GangWorker::loop()+0x254
V [libjvm.so+0x898320] java_start(Thread*)+0x100;; java_start(Thread*)+0x100
Seems to be related to
- backported by
-
JDK-8130541 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8131399 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8131655 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8133369 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8135580 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8137711 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8143674 nmethod related crash in CMS
-
- Resolved
-
-
JDK-8129586 nmethod related crash in CMS
-
- Closed
-
(3 backported by)