8129108: nmethod related crash in CMS

Add SO_AllCodeCache to root scanning options when not unloading classes with a CMS collection cycle

Reviewed-by: mgerdin, jwilhelm